--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,16 @@
 	<h1>simple simon</h1>
 </div>
 <div id="game">
-	<div class="square" id="red"></div>
-	<div class="square" id="yellow"></div>
-	<div class="square" id="green"></div>
-	<div class="square" id="blue"></div>
+	<div class="squares" id="red"></div>
+	<div class="squares" id="yellow"></div>
+	<div class="squares" id="green"></div>
+	<div class="squares" id="blue"></div>
 </div>
 <div id="control">
 	<h2>Press <span class="italics">Play</span> to begin.</h2>
 	<button id="play" type="button">Play</button>
 </div>
-	
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="/js/script.js"></script>
 </body>
 </html>
