--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 	<h2>Press <span class="italics">Play</span> to begin.</h2>
 	<button id="play" type="button">Play</button>
 </div>
-	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 	<script src="/js/script.js"></script>
 </body>
 </html>
