--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,17 @@
 	<h1>simple simon</h1>
 </div>
 <div id="game">
-	<div class="squares" id="red"></div>
-	<div class="squares" id="yellow"></div>
-	<div class="squares" id="green"></div>
-	<div class="squares" id="blue"></div>
+	<div class="squares" id="red" data-square="1"></div>
+	<div class="squares" id="yellow" data-square="2"></div>
+	<div class="squares" id="green" data-square="3"></div>
+	<div class="squares" id="blue" data-square="4"></div>
 </div>
 <div id="control">
 	<h2>Press <span class="italics">Play</span> to begin.</h2>
 	<button id="play" type="button">Play</button>
 </div>
-	<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="/js/script.js"></script>
 </body>
 </html>
