Added id="instructions" to h2 tag in control div.

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 	<div class="squares" id="blue" data-square="4"></div>
 </div>
 <div id="control">
-	<h2>Press <span class="italics">Play</span> to begin.</h2>
+	<h2 id="instructions">Press <span class="italics">Play</span> to begin.</h2>
 	<button id="play" type="button">Play</button>
 </div>
 
