--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
 	<h1>simple simon</h1>
 </div>
 <div id="game">
-	<div class="squares" id="red" data-value="1"></div>
-	<div class="squares" id="yellow" data-value="2"></div>
-	<div class="squares" id="green" data-value="3"></div>
-	<div class="squares" id="blue" data-value="4"></div>
+	<div class="squares" id="red" data-id="1"></div>
+	<div class="squares" id="yellow" data-id="2"></div>
+	<div class="squares" id="green" data-id="3"></div>
+	<div class="squares" id="blue" data-id="4"></div>
 </div>
 <div id="control">
 	<h2 id="instructions">Press <span class="italics">Play</span> to begin.</h2>
