Added class of divs underneath tiles such that when tiles fade out the brighter div below becomes visible simulating illumination.

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,13 @@
 	<h1>simple simon</h1>
 </div>
 <div id="game">
+	<div class="flash" id="flash-red"></div>
 	<div class="tiles" id="red" data-id="1"></div>
+	<div class="flash" id="flash-yellow"></div>
 	<div class="tiles" id="yellow" data-id="2"></div>
+	<div class="flash" id="flash-green"></div>
 	<div class="tiles" id="green" data-id="3"></div>
+	<div class="flash" id="flash-blue"></div>
 	<div class="tiles" id="blue" data-id="4"></div>
 </div>
 <div id="control">
