Added p tag for high score, styled and coded JS to display on game end. Shortened the animateSequence .fadeIn() to 600 and lengthened the overall setTimeout to 1500. Added setTimeout to instructions.html in playerGo(). Moved the code that hides play button, pressPlay.attr('hidden', true), to the button handler itself.

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 <body>
 <div id="h1">
 	<h1>simple simon</h1>
+	<p id="score"></p>
 </div>
 <div id="game">
 	<div class="flash" id="flash-red"></div>
