HTML: Added option button for new style. Added google font link, but it's not working. CSS: Added image files and wrote new stylesheet for lego style option. JS: Coded .click() that changes href attribute of link tag to new stylesheet.

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link href="https://fonts.googleapis.com/css?family=Chango|Sniglet:800" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Sniglet:800" rel="stylesheet">
 	<title>Simple Simon</title>
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 
 <body>
-<div id="h1">
+<div id="header">
 	<h1>simple simon</h1>
 	<p id="score"></p>
+</div>
+<div class="options" id="options-div">
+	<h3>options:</h3>
+	<button class="options" id="brick" type="button">lego	</button>
 </div>
 <div id="game">
 	<div class="flash" id="flash-red"></div>
