--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link href="https://fonts.googleapis.com/css?family=Chango|Sniglet:800" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Sniglet:800" rel="stylesheet">
 	<title>Simple Simon</title>
 	<link rel="stylesheet" type="text/css" href="/css/style.css" id="link">
@@ -14,7 +13,7 @@
 </div>
 <div class="options" id="options-div">
 	<h3>options:</h3>
-	<button class="options" id="simon" type="button" data-option="1">simon</button>
+	<button class="options" id="simon" type="button" data-option="1">default</button>
 	<button class="options" id="brick" type="button" data-option="2">lego</button>
 	<button class="options" id="marvel" type="button" data-option="3">marvel</button>
 	<button class="options" id="batman" type="button" data-option="4">batman</button>
